--- a/Test patsy formula extensions.ipynb
+++ b/Test patsy formula extensions.ipynb
@@ -2528,6 +2528,13 @@
    "sideBar": true,
    "threshold": 4,
    "toc_cell": false,
+   "toc_position": {
+    "height": "1134px",
+    "left": "0px",
+    "right": "1644px",
+    "top": "106px",
+    "width": "372px"
+   },
    "toc_section_display": "block",
    "toc_window_display": true
   }
